added method to get the net current

--- a/docs/source/pythonapi/examples/mgxs-part-i.ipynb
+++ b/docs/source/pythonapi/examples/mgxs-part-i.ipynb
@@ -401,9 +401,9 @@
     "# Instantiate a tally mesh                                                                                                                                                                  \n",
     "mesh = openmc.Mesh(mesh_id=1)\n",
     "mesh.type = 'regular'\n",
-    "mesh.dimension = [2, 2, 1]\n",
+    "mesh.dimension = [4, 4, 1]\n",
     "mesh.lower_left = [-0.63, -0.63, -10000.]\n",
-    "mesh.width = [0.63, 0.63, 20000.]\n",
+    "mesh.width = [0.63/2, 0.63/2, 20000.]\n",
     "\n",
     "# Instantiate a few different sections\n",
     "total = mgxs.TotalXS(domain=cell, groups=groups)\n",
@@ -517,8 +517,8 @@
       "      Copyright:      2011-2016 Massachusetts Institute of Technology\n",
       "      License:        http://openmc.readthedocs.io/en/latest/license.html\n",
       "      Version:        0.8.0\n",
-      "      Git SHA1:       c1dbe99816fb80a394479ed5552421e4a176db8b\n",
-      "      Date/Time:      2016-08-17 16:08:37\n",
+      "      Git SHA1:       09886f41c41623413405b0681a599248c2dad1fd\n",
+      "      Date/Time:      2016-08-22 21:41:05\n",
       "      MPI Processes:  2\n",
       "\n",
       " ===========================================================================\n",
@@ -604,20 +604,20 @@
       "\n",
       " =======================>     TIMING STATISTICS     <=======================\n",
       "\n",
-      " Total time for initialization     =  8.9100E-01 seconds\n",
-      "   Reading cross sections          =  3.4800E-01 seconds\n",
-      " Total time in simulation          =  5.4500E-01 seconds\n",
-      "   Time in transport only          =  5.1700E-01 seconds\n",
-      "   Time in inactive batches        =  6.9000E-02 seconds\n",
-      "   Time in active batches          =  4.7600E-01 seconds\n",
-      "   Time synchronizing fission bank =  1.8000E-02 seconds\n",
-      "     Sampling source sites         =  1.0000E-03 seconds\n",
-      "     SEND/RECV source sites        =  2.0000E-03 seconds\n",
-      "   Time accumulating tallies       =  0.0000E+00 seconds\n",
-      " Total time for finalization       =  2.0000E-03 seconds\n",
-      " Total time elapsed                =  1.4410E+00 seconds\n",
-      " Calculation Rate (inactive)       =  1.44928E+05 neutrons/second\n",
-      " Calculation Rate (active)         =  84033.6 neutrons/second\n",
+      " Total time for initialization     =  2.2850E+00 seconds\n",
+      "   Reading cross sections          =  1.1050E+00 seconds\n",
+      " Total time in simulation          =  4.0910E+00 seconds\n",
+      "   Time in transport only          =  1.8570E+00 seconds\n",
+      "   Time in inactive batches        =  6.2200E-01 seconds\n",
+      "   Time in active batches          =  3.4690E+00 seconds\n",
+      "   Time synchronizing fission bank =  1.2270E+00 seconds\n",
+      "     Sampling source sites         =  4.9100E-01 seconds\n",
+      "     SEND/RECV source sites        =  1.7900E-01 seconds\n",
+      "   Time accumulating tallies       =  4.5800E-01 seconds\n",
+      " Total time for finalization       =  1.0000E-02 seconds\n",
+      " Total time elapsed                =  6.3970E+00 seconds\n",
+      " Calculation Rate (inactive)       =  16077.2 neutrons/second\n",
+      " Calculation Rate (active)         =  11530.7 neutrons/second\n",
       "\n",
       " ============================>     RESULTS     <============================\n",
       "\n",
@@ -732,20 +732,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.487     0.170875  0.        0.37145   0.        0.      ]\n",
-      " [ 0.002275  0.00085   0.        0.001575  0.        0.      ]\n",
-      " [ 0.4409    0.        0.        0.45115   0.        0.      ]\n",
-      " [ 0.002025  0.        0.        0.002075  0.        0.      ]\n",
-      " [ 0.487     0.176475  0.376325  0.        0.        0.      ]\n",
-      " [ 0.0022    0.0011    0.001525  0.        0.        0.      ]\n",
-      " [ 0.434975  0.        0.462525  0.        0.        0.      ]\n",
-      " [ 0.002625  0.        0.001825  0.        0.        0.      ]]\n"
+      "[[ 0.244075  0.0444    0.        0.171125  0.        0.      ]\n",
+      " [ 0.001125  0.000275  0.        0.000575  0.        0.      ]\n",
+      " [ 0.23965   0.08595   0.        0.202225  0.        0.      ]\n",
+      " [ 0.001     0.000325  0.        0.0011    0.        0.      ]\n",
+      " [ 0.220125  0.1246    0.        0.218975  0.        0.      ]\n",
+      " [ 0.001025  0.00075   0.        0.00095   0.        0.      ]\n",
+      " [ 0.19775   0.        0.        0.2311    0.        0.      ]\n",
+      " [ 0.000975  0.        0.        0.0008    0.        0.      ]\n",
+      " [ 0.242925  0.0435    0.168875  0.1696    0.        0.      ]\n",
+      " [ 0.00115   0.000275  0.000775  0.000775  0.        0.      ]\n",
+      " [ 0.2333    0.084925  0.206175  0.20185   0.        0.      ]\n",
+      " [ 0.001375  0.000525  0.000775  0.0008    0.        0.      ]\n",
+      " [ 0.220775  0.127925  0.223475  0.218775  0.        0.      ]\n",
+      " [ 0.001     0.00075   0.000925  0.001175  0.        0.      ]\n",
+      " [ 0.19825   0.        0.239925  0.232375  0.        0.      ]\n",
+      " [ 0.000975  0.        0.000925  0.0009    0.        0.      ]\n",
+      " [ 0.243225  0.04775   0.170625  0.169575  0.        0.      ]\n",
+      " [ 0.001125  0.0003    0.000675  0.00055   0.        0.      ]\n",
+      " [ 0.23705   0.087025  0.2057    0.2033    0.        0.      ]\n",
+      " [ 0.001175  0.0006    0.00085   0.00085   0.        0.      ]\n",
+      " [ 0.21765   0.125725  0.22595   0.2246    0.        0.      ]\n",
+      " [ 0.001275  0.0007    0.000975  0.001275  0.        0.      ]\n",
+      " [ 0.195025  0.        0.236575  0.2304    0.        0.      ]\n",
+      " [ 0.001225  0.        0.00085   0.000875  0.        0.      ]\n",
+      " [ 0.243775  0.04345   0.166825  0.        0.        0.      ]\n",
+      " [ 0.001075  0.00035   0.000575  0.        0.        0.      ]\n",
+      " [ 0.232525  0.08945   0.203125  0.        0.        0.      ]\n",
+      " [ 0.001325  0.0005    0.00095   0.        0.        0.      ]\n",
+      " [ 0.217325  0.126475  0.222275  0.        0.        0.      ]\n",
+      " [ 0.00135   0.000875  0.000975  0.        0.        0.      ]\n",
+      " [ 0.193025  0.        0.23375   0.        0.        0.      ]\n",
+      " [ 0.0012    0.        0.00095   0.        0.        0.      ]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x10ed179d0>"
+       "<matplotlib.lines.Line2D at 0x1113fd390>"
       ]
      },
      "execution_count": 18,
@@ -754,9 +778,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAMAAAAD7CAYAAAA8YZtpAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACmxJREFUeJzt3V2IHYUZxvH/s67GxNhQqqgkqGjZFm+qpUQwXmxrsKmC\nXpVGBMGLemNJaEEUbxIvCr2zueiNrUq1fpSGploQPyBdS1qM0SSNmqRpK9ZIu8GCKCEVxLy9OJOQ\nHs7Jzu6ZmTNn3ucHYc+eTOadOTnPzvmaZxURmGU1Ne4NMBsnB8BScwAsNQfAUnMALDUHwFIbWwAk\nbZB0WNIRSffXPOtRScckHahzzhnz1kjaKemgpLckbap53jJJuyXtK+ZtqXNeMXNK0l5Jz9c9q5j3\nnqS/FPv4emUrjojG/9AL3t+BK4Bzgf3AV2ucdyNwLXCgof27FLi2uLwS+Gud+1fMWVF8PQd4DVhb\n87wfAr8Cnm/oNn0X+GLV6x3XEWAt8LeI+GdEfAY8C9xe17CI2AV8VNf6B8ybj4j9xeXjwCFgdc0z\nTxQXlwHTQG3vcEpaA9wC/KKuGYPGUsMjlnEFYDVw9IzvP6DmO8i4SLqS3tFnd81zpiTtA+aBVyJi\nT43jHgbuo8aQDRDAS5L2SPp+VSsdVwA04LrOfSZD0kpgO7C5OBLUJiJORsR1wBrgeknX1DFH0q3A\nseIIJwb/X9bhhoj4Br0jz72SbqxipeMKwAfA5Wd8vwb415i2pRaSpund+Z+MiOeamhsRnwBzwIaa\nRqwDbpP0LvAM8E1JT9Q067SImC++fgjsoPcwemTjCsAe4MuSrpB0HrARqPvVhCZ/WgE8BhyMiG11\nD5J0kaRVxeXlwHrgcB2zIuLBiLg8Iq6i9/+2MyLuqmPWKZJWFEdTJF0A3Ay8XcW6xxKAiPgc+AHw\nMvAO8GxEHKprnqSngT8DM5Lel3R3XbOKeeuAO4FvFS/b7ZVU109kgMuAP0jaT++5xksR8UKN85p2\nCbCreI7zGvD7iHi5ihWreInJLCW/E2ypOQCWmgNgqTkAlpoDYKlNV7UiSX45yVorIga+B1TpEWAp\nn8bbsmVL7Z8kHMcsz2vPvLPxQyBLzQGw1MYegNnZ2U7O8rzJmFfZRyEkRVXrMquSJKKJJ8Fmk8YB\nsNQcAEutVACarDAxa9KCT4IlTQFHgJvonba4B9gYEYf7lvOTYGulUZ8EN1phYtakMp8FGlRhMvIJ\nyffc8xOOHPn0/66bmTmfRx55YNRVj3XWOHR9/+pUJgC1VJgcOfIpr766te/a/u+r0eSscej6/tWp\nTABKV5hs3br19OXZ2dnG3yk0A5ibm2Nubq7UsmUCcLrCBPg3vSqMOwYteGYAzMal/4fvQw89NHTZ\nBQMQEZ9LOlVhMgU8GjVWmJg1qdQJMRHxIvCVKgfPzJxP/+PU3nXVa3LWOHR9/+rkD8NZ5/nDcGZD\nOACWmgNgqTkAlpoDYKk5AJaaA2CpOQCWmgNgqTkAlpoDYKk5AJaaA2CpOQCWmgNgqTkAlpoDYKk5\nAJbaggGQ9KikY5IONLFBZk0qcwR4HPh23RtiNg5lalF2FZ1AlXI1YnW6vn91quz3BC+WqxGr0/X9\nq1OlAXA1orVB1dWIpbka0dpgMdWIZV8GFYNbos0m2oJHAElPA7PAlyS9D2yJiMdHHexqxOp0ff/q\n5GpE6zxXI5oN4QBYag6ApeYAWGoOgKXmAFhqDoCl5gBYag6ApeYAWGoOgKXmAFhqDoCl5gBYag6A\npeYAWGoOgKXmAFhqDoClVqYbdI2knZIOSnpL0qYmNsysCQueFC/pUuDSiNgvaSXwJnB7RBzuW84n\nxVsrne2k+DLdoPPAfHH5uKRDwGrg8Fn/4QLcZ1kd35ZLt6hmOElXAtcCu0cd7D7L6vi2XLrSASge\n/mwHNkfE8UHLuBvU2qDyblBJ0/Tu/E9GxHPDlnM3qLVBHd2gjwEHI2LbSFtm1jJlukHXAXcCb0na\nBwTwYES8OMpg91lWx7fl0rkb1DrP3aBmQzgAlpoDYKk5AJaaA2CpOQCWmgNgqTkAlpoDYKk5AJaa\nA2CpOQCWmgNgqTkAlpoDYKk5AJaaA2CpOQCWmgNgqZU5KX4Z8EfgvGL57RExvGfCbIKUOile0oqI\nOCHpHOBPwKaIeL1vGZ8Ub600UjcoQEScKC4uK/7NyPd091lWx7fl0pVthpui1wp9NfCziNgz6mD3\nWVbHt+XSlT0CnASuk/QF4HeSromIg/3LuRvU2qDybtBTIuITSXPABuCsATAbl0q7QSVdJGlVcXk5\nsJ4RfzeAWVuUOQJcBvyyeB4wBfw6Il4YdbD7LKvj23Lp3A1qneduULMhHABLzQGw1BwAS80BsNQc\nAEvNAbDUHABLzQGw1BwAS80BsNQcAEvNAbDUHABLzQGw1BwAS80BsNQcAEvNAbDUSgdA0pSkvZKe\nr3ODzJq0mCPAZgZ0AZlNsrLViGuAW4AfAz+qYnCTfZZNd2e6q3NylG2Gexi4D1hV1eAm+yyb7s50\nV+fkKPP7AW4FjkXEfkmzwMB+FXA3qLVD1d2g64DbJN0CLAculPRERNzVv6C7Qa0NKu0GjYgHI+Ly\niLgK2AjsHHTnN5tEi2qHrlKTfZZNd2e6q3NyuBvUOs/doGZDOACWmgNgqTkAlpoDYKk5AJaaA2Cp\nOQCWmgNgqTkAlpoDYKk5AJaaA2CpOQCWmgNgqTkAlpoDYKk5AJaaA2CplW2Gew/4GDgJfBYRa+vc\nKLOmlG2FOAnMRsRHdW6MWdPKBkBU/HDJ3aDWBmUDEMBLkgJ4JCJ+Pupgd4NaG5QNwA0RMS/pYuAV\nSYciYlf/Qu4GtTaouhuUiJgvvn4oaQewFjhrAMzGpdJuUEkrJK0sLl8A3Ay8PfJWmrVAmSPAJcCO\n4vH/NPBURLw86mB3g1obuBvUOs/doGZDOACWmgNgqTkAlpoDYKk5AJaaA2CpOQCWmgNgqTkAlpoD\nYKk5AJaaA2CpOQCWmgNgqTkAlpoDYKk5AJaaA2CplQqApFWSfiPpkKR3JF1f94aZNaFsMdY24IWI\n+K6kaWBFjdtk1pgFWyEkXQjsj4irF1huUa0QXe7P7PK+TaKztUKUOQJcBfxH0uPA14A3gM0R8d9R\nNqrL/Zld3reuKROAaeDrwL0R8YaknwIPAFv6F3Q3qLVB1d2gHwBHI+KN4vvtwP2DFnQ3qLVBpd2g\nEXEMOCppprjqJuDgaJto1g5lXwXaBDwl6VzgXeDuUQd3uT+zy/vWNe4Gtc5zN6jZEA6ApeYAWGoO\ngKXmAFhqDoCl5gBYag6ApeYAWGoOgKXmAFhqDoCl5gBYag6ApeYAWGoOgKXmAFhqDoCltmAAJM1I\n2idpb/H1Y0mbmtg4s7ot6pxgSVP0alKuj4ijfX/nc4Ktlao8J3g98I/+O7/ZpCpbi3LK94Bnqhjc\n5f7MLu9b15QOQNEJdBu9WsSRdbk/s8v71jWLOQJ8B3gzIj4ctoC7Qa0Nqu4GPeUOFnj4425Qa4NK\nu0EBJC2n9wT4tyNum1mrlDoCFL8L4OIqB3e5P7PL+9Y17ga1znM3qNkQDoCl5gBYag6ApeYAWGpj\nD0DZd+wmbZbnTcY8B8DzUs8bewDMxskBsNQqfSe4khWZ1WDYO8GVBcBsEvkhkKXmAFhqDoCl5gBY\nag6ApfY/cHPDrOuxWIEAAAAASUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAEkAAAD7CAYAAAAmcbmiAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACc5JREFUeJztnW+IHWcVxn/PJjZtGqzBalazmBUlWEFJUVppAm6gllDB\nglDUSjFR0n6otKiIsX7IRgWrYESKiqmxtNWaSiCagthU6k2x0hhNYiL5Vy2bGEpiP2hrKJU2OX6Y\n93Yn25m7JzN77967c35wyb3v+56Z2Wcn7zzv3DNnZWYEnRma7QMYBEIkByGSgxDJQYjkIERy0DOR\nJK2RdFTScUlfybVvlXRG0sGCmBFJT0g6LOmQpDtzfQsk7ZG0P/VtLIgfkrRP0s4p7ROS/ppi/zTt\nwZtZ119kv4y/A8uANwAHgPekvlXACuBgQdwwsCK9XwQca8eltoXp33nA08A1U+K/APwM2Dml/Vlg\nsff4e3UmXQM8Y2YnzOwVYBtwE4CZ/QH4d1GQmZ02swPp/VngCLA01/9SersAmA+85owljQA3Aj8p\n2LS4iP9FvRJpKfDP3OdT5H5YD5JGyc64Pbm2IUn7gdPA42a2NxfyPeDL5ITLYcBjkvZKWj/dvnsl\nkgra3OshSYuA7cBd6YzKNmB23syuBkaAayW9N43/KHAmnYUq2P91ZvZBsjPtDkmrOu2/VyKdAt6R\n+zwCPOcJlDSfTKCHzOzXRWPM7EWgBaxJTSuBj0l6FvgFsFrSg7nxp9O/zwM7yKaDcno0cc9jcuK+\nhGzivirXPwocKol9ENhc0H4lcEV6fxnwJHBjwbgPk5u4gYXAovT+cuAp4IaOx98LkdIBrSG7Oj0D\nbMi1P0x2Vv0POAmsy/WtBM4lUfcD+4A1qe996fMB4CDwtZL9ThXpnbntHcofS9lLKTDoQDhuByGS\ngxDJQYjkoJZIZYvWOUeNS3rponXKOBuUV9nPOr+Gvq8tWgEktRetR6cOXL/+Wxw//jITEy1GR8cA\nWL78UrZs2cBtt91T2tdmfHyc8fHxC7ZZNa6sTypaOWXUEalo0Vpo748ff5ndu8eBcU6caB/Y+LR9\nnagaV4U6IrkXrRMTLbIfoJVeYzV2OzNMTEyUnmVTqSOSe9E6OjqWftstygUqa4exsfK+qnFr1669\noH/Tpk2lY+tc3fYC75a0TNIlwCeBnZ1Dxir1dUOkztu8kMpnkpmdk/R5YBeZ2FvN7EjR2OXLL2Xq\nfJG1de7rRNW4KnR9gSvJBmERLQkzK7zE1ZmT3LQv13mmWoCivqrbnGl6ItLk5TrP+LR9Vbc508Ta\nzUGI5CBEctCTOSkswHQ7CAvgIyyAg7AADSBEchAiOQgL4CAsQCIsQE3CAjiIidtBiOQgRHIQFsBB\nWIBEWICahAVwEBO3gxDJQYjkoNacJGkCeAE4D7xiZoX5SY22AOnZjQ+YWeGjWGlM4y2A67mxpluA\n9nNjBmwxs/uKBg26Bagr0nVmdlrSW4DHJR2x7EnIC5hMB4Qs6Wqs5m7r02q1aLVarrG1RLLcc2OS\n2s+NvU6kyXTA/mFsbKz76YCSFqYnGpF0OXAD8Leq2+tn6pxJS4AdaT6aD/zczHYVDWy0BXDtICyA\nj25crgfJArjoxuU67gL0GSGSgxDJwax/EdBP2ywjLEAiLEBNwgI4iInbQYjkIERyEBbAQViARF9b\ngG70zTSzbgG60TfTxMTtIERyECI5mHUL0I2+mSYsQCIsQE3CAjiIidtBiORgWpGKKq9LWixpl6Rj\nkh6TdEV3D3N28cxJ9wP3khXqbbMB+J2ZfSdVBfxqaitk0C2AtxLgMnLl6cmK2y1J74eBox1ibRCg\nC9UB32pmZ5IC7SSuUsICOBh0C1BVpDOSlpjZGUnDwL86DW5KOuDUOvs7gbXAt4HPAIVl6dvM+XRA\nSQ8DfwSWSzopaR1wD/ARSceA69PnOcu0Z5KZ3VLSdb13J4NuAeIuQCLuAtQkLICDWOA6CJEchEgO\n4osAB2EBEmEBahIWwEFM3A5CJAchkoOwAA7CAiTCAtQkLICDmLgdhEgOQiQHYQEchAVI9LUFqBrX\nKAtQNS4sQJ8RIjmomg64UdIpSfvSa013D3N2qZoOCLDZzDZ7dtKN8j99ZwEkLQMeNbP3p88bgbNm\n9l1HbKMtwB2SbgX+DHzJzF4oG9hUC/BD4OtmZpK+CWwGPlc2eNAtQCWRzOz53Mf7gEc7jW9kOqCk\nYUuVAYGPM03Bu0FPB5xWpJQOOAa8WdJJYCOwWtIKspq3E8DtdQ6436maDnj/xeykERag1g4abgHc\nxBcBDuKLgAYQIjkIkRzEFwEOwgIkwgLUJCyAg5i4HYRIDkIkB2EBHIQFSIQFqElYAAcxcTsIkRyE\nSA7CAjgIC5AIC1CTsAAOYuJ2ECI58KQDjkh6QtJhSYck3ZnaG1Mh0DMnvQp80cwOpD+f+BdJu4B1\nOCsEDroFcFUHzL+AX5HVTnJVCKRp1QEljQIrgKeTQK4KgY2xAOm/2nbgLjM7m/4gp4tBtwAukSTN\nJxPoITNrF7lzVwhsSjrgT4HDZvb9XJu7QmAT0gFXAp8GDknaT/b3uO8mE+eXkj4LnARurnXUfYwn\nHfApYF5Jt6tC4KBbgLgLkIi7ADWJuwAOYoHrIERyECI5iC8CHIQFSPS1Baga1ygLUDUuLECfESI5\nCJEczLoFqBoXFmAWCAtQk7AADmLidhAiOQiRHIQFcNATkTpR9SrVjatYGbN+deuXK1gnYk5yECI5\nCJEceHIBRsiK3g0D54AtZnZvquu2nslskrvN7LdF2xiE+9idmHaBm9Jqhi2XDgjcBHwC+K9NUyGw\nEQtcyypunU7vz0o6Aixtb9tzAIPwVXYnqqYD7gFW4awQOOgWoE46oLtCYCMy3YrSAe0iKgQOeqab\n1wK8Lh0wTehtpq0QOMjUSQe8xVshcM5bgNo7aIIFmAkaZQGqMugWINZuDkIkByGSg1m/xx0WgLAA\nbsICOAgL0ABCJAchkoOwAA7CAiTCAtQkLICDmLgdhEgOQiQHYQEchAVIhAWoSVgABzFxOwiRHIRI\nDjy5AAuAJ4FL0vjtZrYp5SptAxYD+4BbzezVom0MugXwFrtbmP6dR1bP7VrgEeDm1P4j4PaS2EqF\n6HoNdQvfmdlL6e0CsrPJgNXAp1L7A2S/8h8XxXfjebde4k3iGiJLKH0X8APgH8B/zOx8GnIKeHtZ\nfDeed+sl3jPpPHC1pDcCO4CrioaVxTciHbCNmb0oaTfwIeBNkoaSgCPAc2Vxcz4dUNKV7bq2ki4j\nq+N2GPg9k8XuOlYHHHQ8Z9LbgAfSvDQEPGJmv0n53NskfQPYD2wt20A3nnfrJXEXINHXdwG6ETfT\nzPpdgG7EzTQ9Xru1yns6Xo6rxVXtm0qI5CDuAjjo6RcBExMtRkfHc23diZtpemIBurqDGaTMAnRd\npLlAzEkOQiQHIZKDEMlBiOTg/y0OnVjQd/gcAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10ed7ebd0>"
+       "<matplotlib.figure.Figure at 0x11144d1d0>"
       ]
      },
      "metadata": {},
