got kinetics solver able to calculate the steady state flux

--- a/docs/source/pythonapi/examples/mgxs-part-i.ipynb
+++ b/docs/source/pythonapi/examples/mgxs-part-i.ipynb
@@ -517,8 +517,8 @@
       "      Copyright:      2011-2016 Massachusetts Institute of Technology\n",
       "      License:        http://openmc.readthedocs.io/en/latest/license.html\n",
       "      Version:        0.8.0\n",
-      "      Git SHA1:       09886f41c41623413405b0681a599248c2dad1fd\n",
-      "      Date/Time:      2016-08-22 21:41:05\n",
+      "      Git SHA1:       b0946a114a1a6d1aeb262e1222e7c50981a725f1\n",
+      "      Date/Time:      2016-08-24 15:42:11\n",
       "      MPI Processes:  2\n",
       "\n",
       " ===========================================================================\n",
@@ -604,20 +604,20 @@
       "\n",
       " =======================>     TIMING STATISTICS     <=======================\n",
       "\n",
-      " Total time for initialization     =  2.2850E+00 seconds\n",
-      "   Reading cross sections          =  1.1050E+00 seconds\n",
-      " Total time in simulation          =  4.0910E+00 seconds\n",
-      "   Time in transport only          =  1.8570E+00 seconds\n",
-      "   Time in inactive batches        =  6.2200E-01 seconds\n",
-      "   Time in active batches          =  3.4690E+00 seconds\n",
-      "   Time synchronizing fission bank =  1.2270E+00 seconds\n",
-      "     Sampling source sites         =  4.9100E-01 seconds\n",
-      "     SEND/RECV source sites        =  1.7900E-01 seconds\n",
-      "   Time accumulating tallies       =  4.5800E-01 seconds\n",
-      " Total time for finalization       =  1.0000E-02 seconds\n",
-      " Total time elapsed                =  6.3970E+00 seconds\n",
-      " Calculation Rate (inactive)       =  16077.2 neutrons/second\n",
-      " Calculation Rate (active)         =  11530.7 neutrons/second\n",
+      " Total time for initialization     =  6.7700E-01 seconds\n",
+      "   Reading cross sections          =  3.2300E-01 seconds\n",
+      " Total time in simulation          =  5.8400E-01 seconds\n",
+      "   Time in transport only          =  5.4300E-01 seconds\n",
+      "   Time in inactive batches        =  7.3000E-02 seconds\n",
+      "   Time in active batches          =  5.1100E-01 seconds\n",
+      "   Time synchronizing fission bank =  1.8000E-02 seconds\n",
+      "     Sampling source sites         =  1.0000E-03 seconds\n",
+      "     SEND/RECV source sites        =  1.0000E-03 seconds\n",
+      "   Time accumulating tallies       =  2.0000E-03 seconds\n",
+      " Total time for finalization       =  6.0000E-03 seconds\n",
+      " Total time elapsed                =  1.2700E+00 seconds\n",
+      " Calculation Rate (inactive)       =  1.36986E+05 neutrons/second\n",
+      " Calculation Rate (active)         =  78277.9 neutrons/second\n",
       "\n",
       " ============================>     RESULTS     <============================\n",
       "\n",
@@ -732,44 +732,76 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.244075  0.0444    0.        0.171125  0.        0.      ]\n",
-      " [ 0.001125  0.000275  0.        0.000575  0.        0.      ]\n",
-      " [ 0.23965   0.08595   0.        0.202225  0.        0.      ]\n",
-      " [ 0.001     0.000325  0.        0.0011    0.        0.      ]\n",
-      " [ 0.220125  0.1246    0.        0.218975  0.        0.      ]\n",
-      " [ 0.001025  0.00075   0.        0.00095   0.        0.      ]\n",
-      " [ 0.19775   0.        0.        0.2311    0.        0.      ]\n",
-      " [ 0.000975  0.        0.        0.0008    0.        0.      ]\n",
-      " [ 0.242925  0.0435    0.168875  0.1696    0.        0.      ]\n",
-      " [ 0.00115   0.000275  0.000775  0.000775  0.        0.      ]\n",
-      " [ 0.2333    0.084925  0.206175  0.20185   0.        0.      ]\n",
-      " [ 0.001375  0.000525  0.000775  0.0008    0.        0.      ]\n",
-      " [ 0.220775  0.127925  0.223475  0.218775  0.        0.      ]\n",
-      " [ 0.001     0.00075   0.000925  0.001175  0.        0.      ]\n",
-      " [ 0.19825   0.        0.239925  0.232375  0.        0.      ]\n",
-      " [ 0.000975  0.        0.000925  0.0009    0.        0.      ]\n",
-      " [ 0.243225  0.04775   0.170625  0.169575  0.        0.      ]\n",
-      " [ 0.001125  0.0003    0.000675  0.00055   0.        0.      ]\n",
-      " [ 0.23705   0.087025  0.2057    0.2033    0.        0.      ]\n",
-      " [ 0.001175  0.0006    0.00085   0.00085   0.        0.      ]\n",
-      " [ 0.21765   0.125725  0.22595   0.2246    0.        0.      ]\n",
-      " [ 0.001275  0.0007    0.000975  0.001275  0.        0.      ]\n",
-      " [ 0.195025  0.        0.236575  0.2304    0.        0.      ]\n",
-      " [ 0.001225  0.        0.00085   0.000875  0.        0.      ]\n",
-      " [ 0.243775  0.04345   0.166825  0.        0.        0.      ]\n",
-      " [ 0.001075  0.00035   0.000575  0.        0.        0.      ]\n",
-      " [ 0.232525  0.08945   0.203125  0.        0.        0.      ]\n",
-      " [ 0.001325  0.0005    0.00095   0.        0.        0.      ]\n",
-      " [ 0.217325  0.126475  0.222275  0.        0.        0.      ]\n",
-      " [ 0.00135   0.000875  0.000975  0.        0.        0.      ]\n",
-      " [ 0.193025  0.        0.23375   0.        0.        0.      ]\n",
-      " [ 0.0012    0.        0.00095   0.        0.        0.      ]]\n"
+      "[[ 0.244075  0.0444    0.        0.171125  0.        0.        0.        0.23965\n",
+      "   0.        0.168875  0.        0.      ]\n",
+      " [ 0.001125  0.000275  0.        0.000575  0.        0.        0.        0.001\n",
+      "   0.        0.000775  0.        0.      ]\n",
+      " [ 0.23965   0.08595   0.        0.202225  0.        0.        0.0444\n",
+      "   0.220125  0.        0.206175  0.        0.      ]\n",
+      " [ 0.001     0.000325  0.        0.0011    0.        0.        0.000275\n",
+      "   0.001025  0.        0.000775  0.        0.      ]\n",
+      " [ 0.220125  0.1246    0.        0.218975  0.        0.        0.08595\n",
+      "   0.19775   0.        0.223475  0.        0.      ]\n",
+      " [ 0.001025  0.00075   0.        0.00095   0.        0.        0.000325\n",
+      "   0.000975  0.        0.000925  0.        0.      ]\n",
+      " [ 0.19775   0.        0.        0.2311    0.        0.        0.1246    0.\n",
+      "   0.        0.239925  0.        0.      ]\n",
+      " [ 0.000975  0.        0.        0.0008    0.        0.        0.00075   0.\n",
+      "   0.        0.000925  0.        0.      ]\n",
+      " [ 0.242925  0.0435    0.168875  0.1696    0.        0.        0.        0.2333\n",
+      "   0.171125  0.170625  0.        0.      ]\n",
+      " [ 0.00115   0.000275  0.000775  0.000775  0.        0.        0.        0.001375\n",
+      "   0.000575  0.000675  0.        0.      ]\n",
+      " [ 0.2333    0.084925  0.206175  0.20185   0.        0.        0.0435\n",
+      "   0.220775  0.202225  0.2057    0.        0.      ]\n",
+      " [ 0.001375  0.000525  0.000775  0.0008    0.        0.        0.000275\n",
+      "   0.001     0.0011    0.00085   0.        0.      ]\n",
+      " [ 0.220775  0.127925  0.223475  0.218775  0.        0.        0.084925\n",
+      "   0.19825   0.218975  0.22595   0.        0.      ]\n",
+      " [ 0.001     0.00075   0.000925  0.001175  0.        0.        0.000525\n",
+      "   0.000975  0.00095   0.000975  0.        0.      ]\n",
+      " [ 0.19825   0.        0.239925  0.232375  0.        0.        0.127925  0.\n",
+      "   0.2311    0.236575  0.        0.      ]\n",
+      " [ 0.000975  0.        0.000925  0.0009    0.        0.        0.00075   0.\n",
+      "   0.0008    0.00085   0.        0.      ]\n",
+      " [ 0.243225  0.04775   0.170625  0.169575  0.        0.        0.        0.23705\n",
+      "   0.1696    0.166825  0.        0.      ]\n",
+      " [ 0.001125  0.0003    0.000675  0.00055   0.        0.        0.        0.001175\n",
+      "   0.000775  0.000575  0.        0.      ]\n",
+      " [ 0.23705   0.087025  0.2057    0.2033    0.        0.        0.04775\n",
+      "   0.21765   0.20185   0.203125  0.        0.      ]\n",
+      " [ 0.001175  0.0006    0.00085   0.00085   0.        0.        0.0003\n",
+      "   0.001275  0.0008    0.00095   0.        0.      ]\n",
+      " [ 0.21765   0.125725  0.22595   0.2246    0.        0.        0.087025\n",
+      "   0.195025  0.218775  0.222275  0.        0.      ]\n",
+      " [ 0.001275  0.0007    0.000975  0.001275  0.        0.        0.0006\n",
+      "   0.001225  0.001175  0.000975  0.        0.      ]\n",
+      " [ 0.195025  0.        0.236575  0.2304    0.        0.        0.125725  0.\n",
+      "   0.232375  0.23375   0.        0.      ]\n",
+      " [ 0.001225  0.        0.00085   0.000875  0.        0.        0.0007    0.\n",
+      "   0.0009    0.00095   0.        0.      ]\n",
+      " [ 0.243775  0.04345   0.166825  0.        0.        0.        0.        0.232525\n",
+      "   0.169575  0.        0.        0.      ]\n",
+      " [ 0.001075  0.00035   0.000575  0.        0.        0.        0.        0.001325\n",
+      "   0.00055   0.        0.        0.      ]\n",
+      " [ 0.232525  0.08945   0.203125  0.        0.        0.        0.04345\n",
+      "   0.217325  0.2033    0.        0.        0.      ]\n",
+      " [ 0.001325  0.0005    0.00095   0.        0.        0.        0.00035\n",
+      "   0.00135   0.00085   0.        0.        0.      ]\n",
+      " [ 0.217325  0.126475  0.222275  0.        0.        0.        0.08945\n",
+      "   0.193025  0.2246    0.        0.        0.      ]\n",
+      " [ 0.00135   0.000875  0.000975  0.        0.        0.        0.0005\n",
+      "   0.0012    0.001275  0.        0.        0.      ]\n",
+      " [ 0.193025  0.        0.23375   0.        0.        0.        0.126475  0.\n",
+      "   0.2304    0.        0.        0.      ]\n",
+      " [ 0.0012    0.        0.00095   0.        0.        0.        0.000875  0.\n",
+      "   0.000875  0.        0.        0.      ]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x1113fd390>"
+       "<matplotlib.lines.Line2D at 0x110e3ba90>"
       ]
      },
      "execution_count": 18,
@@ -778,9 +810,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAEkAAAD7CAYAAAAmcbmiAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACc5JREFUeJztnW+IHWcVxn/PJjZtGqzBalazmBUlWEFJUVppAm6gllDB\nglDUSjFR0n6otKiIsX7IRgWrYESKiqmxtNWaSiCagthU6k2x0hhNYiL5Vy2bGEpiP2hrKJU2OX6Y\n93Yn25m7JzN77967c35wyb3v+56Z2Wcn7zzv3DNnZWYEnRma7QMYBEIkByGSgxDJQYjkIERy0DOR\nJK2RdFTScUlfybVvlXRG0sGCmBFJT0g6LOmQpDtzfQsk7ZG0P/VtLIgfkrRP0s4p7ROS/ppi/zTt\nwZtZ119kv4y/A8uANwAHgPekvlXACuBgQdwwsCK9XwQca8eltoXp33nA08A1U+K/APwM2Dml/Vlg\nsff4e3UmXQM8Y2YnzOwVYBtwE4CZ/QH4d1GQmZ02swPp/VngCLA01/9SersAmA+85owljQA3Aj8p\n2LS4iP9FvRJpKfDP3OdT5H5YD5JGyc64Pbm2IUn7gdPA42a2NxfyPeDL5ITLYcBjkvZKWj/dvnsl\nkgra3OshSYuA7cBd6YzKNmB23syuBkaAayW9N43/KHAmnYUq2P91ZvZBsjPtDkmrOu2/VyKdAt6R\n+zwCPOcJlDSfTKCHzOzXRWPM7EWgBaxJTSuBj0l6FvgFsFrSg7nxp9O/zwM7yKaDcno0cc9jcuK+\nhGzivirXPwocKol9ENhc0H4lcEV6fxnwJHBjwbgPk5u4gYXAovT+cuAp4IaOx98LkdIBrSG7Oj0D\nbMi1P0x2Vv0POAmsy/WtBM4lUfcD+4A1qe996fMB4CDwtZL9ThXpnbntHcofS9lLKTDoQDhuByGS\ngxDJQYjkoJZIZYvWOUeNS3rponXKOBuUV9nPOr+Gvq8tWgEktRetR6cOXL/+Wxw//jITEy1GR8cA\nWL78UrZs2cBtt91T2tdmfHyc8fHxC7ZZNa6sTypaOWXUEalo0Vpo748ff5ndu8eBcU6caB/Y+LR9\nnagaV4U6IrkXrRMTLbIfoJVeYzV2OzNMTEyUnmVTqSOSe9E6OjqWftstygUqa4exsfK+qnFr1669\noH/Tpk2lY+tc3fYC75a0TNIlwCeBnZ1Dxir1dUOkztu8kMpnkpmdk/R5YBeZ2FvN7EjR2OXLL2Xq\nfJG1de7rRNW4KnR9gSvJBmERLQkzK7zE1ZmT3LQv13mmWoCivqrbnGl6ItLk5TrP+LR9Vbc508Ta\nzUGI5CBEctCTOSkswHQ7CAvgIyyAg7AADSBEchAiOQgL4CAsQCIsQE3CAjiIidtBiOQgRHIQFsBB\nWIBEWICahAVwEBO3gxDJQYjkoNacJGkCeAE4D7xiZoX5SY22AOnZjQ+YWeGjWGlM4y2A67mxpluA\n9nNjBmwxs/uKBg26Bagr0nVmdlrSW4DHJR2x7EnIC5hMB4Qs6Wqs5m7r02q1aLVarrG1RLLcc2OS\n2s+NvU6kyXTA/mFsbKz76YCSFqYnGpF0OXAD8Leq2+tn6pxJS4AdaT6aD/zczHYVDWy0BXDtICyA\nj25crgfJArjoxuU67gL0GSGSgxDJwax/EdBP2ywjLEAiLEBNwgI4iInbQYjkIERyEBbAQViARF9b\ngG70zTSzbgG60TfTxMTtIERyECI5mHUL0I2+mSYsQCIsQE3CAjiIidtBiORgWpGKKq9LWixpl6Rj\nkh6TdEV3D3N28cxJ9wP3khXqbbMB+J2ZfSdVBfxqaitk0C2AtxLgMnLl6cmK2y1J74eBox1ibRCg\nC9UB32pmZ5IC7SSuUsICOBh0C1BVpDOSlpjZGUnDwL86DW5KOuDUOvs7gbXAt4HPAIVl6dvM+XRA\nSQ8DfwSWSzopaR1wD/ARSceA69PnOcu0Z5KZ3VLSdb13J4NuAeIuQCLuAtQkLICDWOA6CJEchEgO\n4osAB2EBEmEBahIWwEFM3A5CJAchkoOwAA7CAiTCAtQkLICDmLgdhEgOQiQHYQEchAVI9LUFqBrX\nKAtQNS4sQJ8RIjmomg64UdIpSfvSa013D3N2qZoOCLDZzDZ7dtKN8j99ZwEkLQMeNbP3p88bgbNm\n9l1HbKMtwB2SbgX+DHzJzF4oG9hUC/BD4OtmZpK+CWwGPlc2eNAtQCWRzOz53Mf7gEc7jW9kOqCk\nYUuVAYGPM03Bu0FPB5xWpJQOOAa8WdJJYCOwWtIKspq3E8DtdQ6436maDnj/xeykERag1g4abgHc\nxBcBDuKLgAYQIjkIkRzEFwEOwgIkwgLUJCyAg5i4HYRIDkIkB2EBHIQFSIQFqElYAAcxcTsIkRyE\nSA7CAjgIC5AIC1CTsAAOYuJ2ECI58KQDjkh6QtJhSYck3ZnaG1Mh0DMnvQp80cwOpD+f+BdJu4B1\nOCsEDroFcFUHzL+AX5HVTnJVCKRp1QEljQIrgKeTQK4KgY2xAOm/2nbgLjM7m/4gp4tBtwAukSTN\nJxPoITNrF7lzVwhsSjrgT4HDZvb9XJu7QmAT0gFXAp8GDknaT/b3uO8mE+eXkj4LnARurnXUfYwn\nHfApYF5Jt6tC4KBbgLgLkIi7ADWJuwAOYoHrIERyECI5iC8CHIQFSPS1Baga1ygLUDUuLECfESI5\nCJEczLoFqBoXFmAWCAtQk7AADmLidhAiOQiRHIQFcNATkTpR9SrVjatYGbN+deuXK1gnYk5yECI5\nCJEceHIBRsiK3g0D54AtZnZvquu2nslskrvN7LdF2xiE+9idmHaBm9Jqhi2XDgjcBHwC+K9NUyGw\nEQtcyypunU7vz0o6Aixtb9tzAIPwVXYnqqYD7gFW4awQOOgWoE46oLtCYCMy3YrSAe0iKgQOeqab\n1wK8Lh0wTehtpq0QOMjUSQe8xVshcM5bgNo7aIIFmAkaZQGqMugWINZuDkIkByGSg1m/xx0WgLAA\nbsICOAgL0ABCJAchkoOwAA7CAiTCAtQkLICDmLgdhEgOQiQHYQEchAVIhAWoSVgABzFxOwiRHIRI\nDjy5AAuAJ4FL0vjtZrYp5SptAxYD+4BbzezVom0MugXwFrtbmP6dR1bP7VrgEeDm1P4j4PaS2EqF\n6HoNdQvfmdlL6e0CsrPJgNXAp1L7A2S/8h8XxXfjebde4k3iGiJLKH0X8APgH8B/zOx8GnIKeHtZ\nfDeed+sl3jPpPHC1pDcCO4CrioaVxTciHbCNmb0oaTfwIeBNkoaSgCPAc2Vxcz4dUNKV7bq2ki4j\nq+N2GPg9k8XuOlYHHHQ8Z9LbgAfSvDQEPGJmv0n53NskfQPYD2wt20A3nnfrJXEXINHXdwG6ETfT\nzPpdgG7EzTQ9Xru1yns6Xo6rxVXtm0qI5CDuAjjo6RcBExMtRkfHc23diZtpemIBurqDGaTMAnRd\npLlAzEkOQiQHIZKDEMlBiOTg/y0OnVjQd/gcAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAHIAAAD7CAYAAAC2YsBtAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADCpJREFUeJztnW+MXFUZxn9PKf+rpVFohYZu0DT4RSsmSADDEqtpNBFj\nYlQMf6oBP2ggYJTKl27VRDABQxCNxVILgiCNSEmMFIKLESMRS1OwpYuSpVTSBaOADcFA+/ph7tLZ\n3TM7Z+7cO3vP6ftLJpm5c99z3t1n7sz7nHvPPTIznPSZN9cJONXgQmaCC5kJLmQmuJCZ4EJmwsCE\nlLRK0jOSxiRdExmzVNIjknZKekrSFT32OU/SNklbeohZKOleSbsk/U3SRyLjrpL0tKQdku6UdFSH\n/TZImpC0o23bIklbJe2W9KCkhbH5vo2Z1f6g9YH5O7AMOBLYDpweEbcEWFE8XwDsjolri78K+AWw\npYeYnwOri+fzgXdGxJwMPAccVby+B7i4w77nAiuAHW3brge+VTy/Briu1//xoI7IM4Fnzex5M3sT\nuBu4oFuQme0zs+3F8/3ALuCUmA4lLQU+CfwsNklJ7wA+amYbiz7fMrPXIsOPAI6XNB84DngxtJOZ\n/RH4z7TNFwCbiuebgM/E5jzJoIQ8BXih7fVeIgWZRNIQrU/y45EhPwS+CfQydHUa8C9JG4uv5PWS\nju0WZGYvAjcAe4B/Aq+Y2cM99HuSmU0Ube0DTuwhFhickApsi/4HS1oAbAauLI7Mbvt/CpgojmZ1\n6D/EfOAM4BYzOwN4HVgT0d8JtI6qZbS+ZhdIujCyz0oYlJB7gVPbXi+lw1fPdIqvqs3AHWZ2f2R/\n5wCflvQc8EvgfEm3R+b5gpk9UbzeTEvYbqwEnjOzf5vZAeDXwNmRuQJMSFoMIGkJ8FIPscDghPwL\n8D5Jy4pq7gtAbCV5G7DTzG6K7czMrjWzU83stKKvR8zs4oi4CeAFScuLTR8DdkZ0uQc4S9IxklTE\n7Zpl/+nfEluAS4vnlwCxH9hDDKJqLaqxVbSqzmeBNZEx5wAHaFW5TwLbgFU99nsevVWtH6T1wdtO\n68haGBm3thBvB62C5cgO+91F69vof8UHYDWwCHi4+P88BJzQ6/9XReNO4vjITia4kJngQmaCC5kJ\nfQlZZiDcqYk+7ETUQDitERx/VPgI6TE/Su0wbw+EA0iaHAh/ZvqOl132fcbG3mB8fJShoWEAli8/\nhvXr13D55dcxNvbGlP0n35tkZGSEkZGRKfuUjYuhyv6qzrM13jCTfoQMDYSfGdpxbOwNHn10BBjh\n+edHiq0j095rZ/rr2drsLa4sTc+zHyGjB8LHx0dpJT9aPIb76PbwYnR0lNHR0a779SNk9ED40NBw\ncSSOUkbE4eHeY3KJGx4envL+unXrgvv1U7WWGAgfnv3tTlEN+sc2Ka6d0kekmR2Q9HVgK60PxAYz\nC474L19+DNN/F1rbZn9vNsrGlaXpedY+aC7JfGC+OiRhZjPqk35+I6OZrQSPKc97bbMOmp7nQISc\nrQRvelnfb3+DytPHWjPBhcwEFzITBvIb6faj97hecfuRGG4/MsozhNuPyDablGcIL3YywYXMBBcy\nE9x+RLbZpDxDuP1IDLcfGeUZwu1HZJtNyjOEFzuZ4EJmgguZCW4/IttsUp4h3H4khtuPjPIM4fYj\nss0m5RnCi51McCEzwYXMhL5+IyWNA68CB4E3zSw4PzKVsj6VPEP0ZT+Ke7192Mym37ayfR+3HxVS\nl/0QEV/PqZT1qeQZol8hDXhQkgHrzezW0E6plPWp5BmiXyHPNrN9kk4EHpK0y1p3CJ7Coann0Jrs\nOtxnt4cPg5h6Pnm3X8zsZUn30boZxAwhD009d3ql9qnnko4r7myMpOOBTwBPl23P6Y9+jsjFwH3F\n7+N84E4z2xraMZWyPpU8Q/jZj8Ro7NkPb7Ma5vzsh7dZDT7WmgkuZCa4kJkw5xdfeZvV4PYjMdx+\nZNRmCLcfCbYZwoudTHAhM8GFzAS3Hwm2GcLtR2I01n7U8V4qf0OVzLn9qOO9Omh6nl7sZIILmQku\nZCbMuf2o4706aHqebj8Sw+1HA/+GKnH7EUnT8/RiJxNcyEzoKqSkDZImJO1o27ZI0lZJuyU9KGlh\nvWk63Yj5jdwI3Azc3rZtDfCwmf2gWO3828W2IG4/wu9VSZT9kLQMeMDMPlC8fgY4z8wmJC0BRs3s\n9A6xbj8qpGr7cZKZTUBrjmQx0bUjqdiPVPIM4fYjwTxDlBVyQtLitq/Wl2bb2aeel6fqqedi6nL1\nW4BLgeuBS4D7Zwv2qeflqWzquaS7gD8ByyXtkbQauA74uKTdwMritTOHdD0izezCDm+tjO0kFfuR\nSp4h/OxHYvjZj4zyDOH2I8E8Q/igeSa4kJngQmaCX3yVYJ4h3H4khtuPjPIM4fYjwTxDeLGTCS5k\nJriQmeD2I8E8Q7j9SAy3HxnlGcLtR4J5hvBiJxNcyExwITPB7UeCeYZw+5EYjbUfZeOadJNctx99\nxDXpJrluP5zKcCEzoezU87WS9kraVjxW1Zum042yU88BbjSzG2M6KVuCN8l+lI1rlP0ITD1fC+w3\nsxsiYt1+VEgd9uNrki4CngC+YWavdtoxlbI+lTxDlBXyx8B3zMwkfQ+4EfhKp51TKetTyTNEKSHN\n7OW2l7cCD8y2v089L0+tU88lLZlc8Rz4LF0Wyfap5+WJnXreVchi6vkw8C5Je4C1wPmSVgAHgXHg\nq/0m7PRH2annG3vpJJWyPpU8Q/jZj8Ro7NmPpl/UVOffUCVzfvaj6Rc1TdL0PH3QPBNcyExwITPB\nL76KpOl5uv1IDLcfDfwbqsTtRyRNz9OLnUxwITPBhcwEtx+RND1Ptx+J4fYjozxDuP1IMM8QXuxk\ngguZCS5kJrj9SDDPEG4/EsPtR0Z5hnD7kWCeIbzYyQQXMhNipp4vlfSIpJ2SnpJ0RbHdVz5vEDG/\nkW8BV5vZdkkLgL9K2gqsJnLl81TK+lTyDNGz/ZD0G+BHxaPryuduP6qlEvshaQhYAfwZWBy78nkq\nZX0qeYaIFrL4Wt0MXGlm+yVFH2aplPWp5BkiSkhJ82mJeIeZTS6MHb3yuU89L0/VU89vA3aa2U1t\n26JXPvep5+Wpcur5OcCXgKckPQkYcC0tAX8l6cvAHuBzfWftlCZm6vljwBEd3l4Z00kqZX0qeYbw\nsx+J4Wc/MsozhJ/9SDDPED5ongkuZCa4kJngF18lmGcItx+J0Vj7UTbOb7w7lTm3H2Xj/Ma7U/Fi\nJxNcyExwITNhzu1H2bhB24+ycW4/nCBuPzLKM4Tbj8j+ysa5/XB6woXMBBcyE9x+RPZXNm5Q9mMg\nQs5G2aqujvuyztZmk/IMMedVaxMqvhianqf/RmaCC5kJLmQmxMz9WEproewlwAFgvZndXKyzfBmH\nZmFda2a/C7XR9OtdYmh6nl0HzYspc0vap54DFwCfB/7bbeVzHzSvltKD5sXKrfuK5/sl7QJOmWw3\npvOmX24fQ9PzLDv1/HHgXCJXPnf7UT/9TD2PXvncZyyXp9IZy6Gp572sfO4zlssTO2M51n7MmHpe\nFEGTdF353KmXfqaeXxi78rnbj/rxa3YSo7HX7DSprE8lzxB+9qONVPIM4WOtmeBCZoILmQlzfs1O\nk8r6VPIM4fYjMdx+ZJRnCLcfbaSSZwgvdjLBhcwEFzIT3H7MaLv3XNx+OD3j9iOjPEO4/WgjlTxD\neLGTCS5kJriQmeD2Y0bbvefi9sPpGbcfGeUZwu1HG6nkGcKLnUxwITPBhcyEmLkfRwN/AI4q9t9s\nZuuKuZJ3A4uAbcBFZvZWqI1UyvpU8gwRZT8kHWdmr0s6AngMuBK4mpao90r6CbDdzH4aiHX7USF9\n2Q8ze714enQRY8D5wBeL7ZtofSRnCAn13Ae1DlLJM0TsRNd5tG4C8V7gFuAfwCtmdrDYZS9wcqf4\nOu6DWgep5Bki9og8CHxI0juB+4D3h3brFO9Tz8tT9WLZAJjZa5IeBc4CTpA0rxB5KfBipzifel6e\nyqaeS3q3pIXF82Nprau8E/g9hxbInnXVc6d+Yo7I9wCbit/JecA9Zvbb4n47d0v6LvAksKFTA3Xc\nB7UOUskzhJ/9SIzGnv2oI64sqeQZYs7PftQRV5ZU8gwx4LHW0YHGxZTtVfY3+DwP4UJW2N9hJKRT\nFwO9+Gp8fJShoZG2bfXE5Z5niIHYj1o7OAwJ2Y/ahXQGg/9GZoILmQkuZCa4kJngQmbC/wGeIUbb\nJ/JKMAAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x11144d1d0>"
+       "<matplotlib.figure.Figure at 0x110dd7f10>"
       ]
      },
      "metadata": {},
