--- a/docs/source/pythonapi/examples/mgxs-part-i.ipynb
+++ b/docs/source/pythonapi/examples/mgxs-part-i.ipynb
@@ -398,7 +398,8 @@
     "# Instantiate a few different sections\n",
     "total = mgxs.TotalXS(domain=cell, groups=groups)\n",
     "absorption = mgxs.AbsorptionXS(domain=cell, groups=groups)\n",
-    "scattering = mgxs.ScatterXS(domain=cell, groups=groups)"
+    "scattering = mgxs.ScatterXS(domain=cell, groups=groups)\n",
+    "dif_coef = mgxs.DiffusionCoefficient(domain=cell, groups=groups)"
    ]
   },
   {
@@ -473,6 +474,9 @@
     "# Add scattering tallies to the tallies file\n",
     "tallies_file += scattering.tallies.values()\n",
     "\n",
+    "# Add scattering tallies to the tallies file\n",
+    "tallies_file += dif_coef.tallies.values()\n",
+    "\n",
     "# Export to \"tallies.xml\"\n",
     "tallies_file.export_to_xml()"
    ]
@@ -524,9 +528,9 @@
       "         Copyright | 2011-2016 Massachusetts Institute of Technology\n",
       "           License | http://openmc.readthedocs.io/en/latest/license.html\n",
       "           Version | 0.8.0\n",
-      "          Git SHA1 | da5563eddb5f2c2d6b2c9839d518de40962b78f2\n",
-      "         Date/Time | 2016-10-31 12:23:45\n",
-      "    OpenMP Threads | 4\n",
+      "          Git SHA1 | 210af40afd6b48abb94e7fd3f4d9495dd1d9bc6b\n",
+      "         Date/Time | 2016-11-13 09:41:44\n",
+      "     MPI Processes | 4\n",
       "\n",
       " ===========================================================================\n",
       " ========================>     INITIALIZATION     <=========================\n",
@@ -536,11 +540,11 @@
       " Reading geometry XML file...\n",
       " Reading materials XML file...\n",
       " Reading cross sections XML file...\n",
-      " Reading H1 from /home/romano/openmc/scripts/nndc_hdf5/H1.h5\n",
-      " Reading O16 from /home/romano/openmc/scripts/nndc_hdf5/O16.h5\n",
-      " Reading U235 from /home/romano/openmc/scripts/nndc_hdf5/U235.h5\n",
-      " Reading U238 from /home/romano/openmc/scripts/nndc_hdf5/U238.h5\n",
-      " Reading Zr90 from /home/romano/openmc/scripts/nndc_hdf5/Zr90.h5\n",
+      " Reading H1 from /Users/sam/git/openmc-sam/data/nndc_hdf5/H1.h5\n",
+      " Reading O16 from /Users/sam/git/openmc-sam/data/nndc_hdf5/O16.h5\n",
+      " Reading U235 from /Users/sam/git/openmc-sam/data/nndc_hdf5/U235.h5\n",
+      " Reading U238 from /Users/sam/git/openmc-sam/data/nndc_hdf5/U238.h5\n",
+      " Reading Zr90 from /Users/sam/git/openmc-sam/data/nndc_hdf5/Zr90.h5\n",
       " Maximum neutron transport energy: 2.00000E+07 eV for H1\n",
       " Reading tallies XML file...\n",
       " Building neighboring cells lists for each surface...\n",
@@ -611,20 +615,20 @@
       "\n",
       " =======================>     TIMING STATISTICS     <=======================\n",
       "\n",
-      " Total time for initialization     =  7.3858E-01 seconds\n",
-      "   Reading cross sections          =  5.3599E-01 seconds\n",
-      " Total time in simulation          =  2.1031E+01 seconds\n",
-      "   Time in transport only          =  1.9960E+01 seconds\n",
-      "   Time in inactive batches        =  2.6543E+00 seconds\n",
-      "   Time in active batches          =  1.8376E+01 seconds\n",
-      "   Time synchronizing fission bank =  5.8389E-03 seconds\n",
-      "     Sampling source sites         =  4.2676E-03 seconds\n",
-      "     SEND/RECV source sites        =  1.4523E-03 seconds\n",
-      "   Time accumulating tallies       =  1.5633E-04 seconds\n",
-      " Total time for finalization       =  7.9179E-04 seconds\n",
-      " Total time elapsed                =  2.1784E+01 seconds\n",
-      " Calculation Rate (inactive)       =  9418.63 neutrons/second\n",
-      " Calculation Rate (active)         =  5441.81 neutrons/second\n",
+      " Total time for initialization     =  5.1617E-01 seconds\n",
+      "   Reading cross sections          =  3.1351E-01 seconds\n",
+      " Total time in simulation          =  7.4986E+00 seconds\n",
+      "   Time in transport only          =  7.2089E+00 seconds\n",
+      "   Time in inactive batches        =  7.2944E-01 seconds\n",
+      "   Time in active batches          =  6.7691E+00 seconds\n",
+      "   Time synchronizing fission bank =  2.6542E-01 seconds\n",
+      "     Sampling source sites         =  2.3220E-03 seconds\n",
+      "     SEND/RECV source sites        =  8.7700E-04 seconds\n",
+      "   Time accumulating tallies       =  2.8470E-03 seconds\n",
+      " Total time for finalization       =  1.2230E-03 seconds\n",
+      " Total time elapsed                =  8.0200E+00 seconds\n",
+      " Calculation Rate (inactive)       =  34272.7 neutrons/second\n",
+      " Calculation Rate (active)         =  14772.9 neutrons/second\n",
       "\n",
       " ============================>     RESULTS     <============================\n",
       "\n",
@@ -649,7 +653,7 @@
    ],
    "source": [
     "# Run OpenMC\n",
-    "openmc.run()"
+    "openmc.run(mpi_procs=4)"
    ]
   },
   {
@@ -703,7 +707,8 @@
     "# Load the tallies from the statepoint into each MGXS object\n",
     "total.load_from_statepoint(sp)\n",
     "absorption.load_from_statepoint(sp)\n",
-    "scattering.load_from_statepoint(sp)"
+    "scattering.load_from_statepoint(sp)\n",
+    "dif_coef.load_from_statepoint(sp)"
    ]
   },
   {
@@ -753,6 +758,63 @@
    ],
    "source": [
     "total.print_xs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multi-Group XS\n",
+      "\tReaction Type  =\ttransport\n",
+      "\tDomain Type    =\tcell\n",
+      "\tDomain ID      =\t1\n",
+      "\tCross Sections [cm^-1]:\n",
+      "            Group 1 [0.625      - 20000000.0eV]:\t9.46e-01 +/- 3.49e-01%\n",
+      "            Group 2 [0.0        - 0.625     eV]:\t3.77e-01 +/- 7.54e-01%\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dif_coef.print_xs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multi-Group XS\n",
+      "\tReaction Type  =\ttransport\n",
+      "\tDomain Type    =\tcell\n",
+      "\tDomain ID      =\t1\n",
+      "\tCross Sections [cm^-1]:\n",
+      "            Group 1 [0.0        - 20000000.0eV]:\t8.41e-01 +/- 3.89e-01%\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "one_group = mgxs.EnergyGroups()\n",
+    "one_group.group_edges = np.array([0., 20.0e6])\n",
+    "dif_coef.get_condensed_xs(one_group).print_xs()"
    ]
   },
   {
@@ -1178,21 +1240,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
